improve binding and add inital e2e tests (#8)